[package]
name = "megastore_search"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"
petgraph = "0.6"
rayon = "1.7"
criterion = "0.5"

[dev-dependencies]
rand = "0.8"
proptest = "1.4"

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "indexing_benchmark"
harness = false

[[bench]]
name = "graph_benchmark"
harness = false
